Small Changes and added Dockerfile and docker-compose.