@@ -1,11 +1,9 @@
 package com.brunoalves.crud.exceptions;
 
-
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.context.request.WebRequest;
@@ -24,21 +22,20 @@ public class GlobalExceptionHandler
         errorObject.setStatusCode(HttpStatus.NOT_FOUND.value());
         errorObject.setMessage(ex.getMessage());
         errorObject.setTimestamp(new Date());
-
-        return new ResponseEntity<ErrorObject>(errorObject, HttpStatus.NOT_FOUND);
+        return new ResponseEntity<>(errorObject, HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
-    protected ResponseEntity<?> handleConstraintViolationException(ConstraintViolationException ex, WebRequest request) {
+    protected ResponseEntity<ErrorObject> handleConstraintViolationException(ConstraintViolationException ex, WebRequest request) {
 
-            List<String> messages = ex.getConstraintViolations().stream().map(ConstraintViolation::getMessage).collect(Collectors.toList());
+            List<String> messages = ex.getConstraintViolations().stream().map(ConstraintViolation::getMessage).toList(); //collect(Collectors.toList());
             ErrorObject errorObject = new ErrorObject();
 
             errorObject.setStatusCode(HttpStatus.NOT_FOUND.value());
             errorObject.setMessage(messages.get(0));
             errorObject.setTimestamp(new Date());
 
-            return new ResponseEntity<ErrorObject>(errorObject, HttpStatus.NOT_FOUND);
+            return new ResponseEntity<>(errorObject, HttpStatus.NOT_FOUND);
     }
 
 }
